--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@mantine/hooks": "7.3.1",
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.40.0",
-    "next": "14.0.1",
+    "http-status-codes": "2.3.0",
+    "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "3.39.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -45,10 +47,11 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "babel-loader": "^9.1.3",
-    "eslint": "^8.53.0",
+    "eslint": "8.56.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-mantine": "3.0.0",
+    "eslint-config-next": "14.0.4",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -61,6 +64,7 @@
     "postcss-preset-mantine": "1.12.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.3",
+    "standard": "17.1.0",
     "storybook": "^7.5.2",
     "storybook-dark-mode": "^3.0.1",
     "stylelint": "^15.11.0",
