--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "jest:watch": "jest --watch",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
-    "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
-    "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build"
+    "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest"
   },
   "dependencies": {
     "@mantine/core": "7.3.1",
@@ -65,8 +63,6 @@
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.3",
     "standard": "17.1.0",
-    "storybook": "^7.5.2",
-    "storybook-dark-mode": "^3.0.1",
     "stylelint": "^15.11.0",
     "stylelint-config-standard-scss": "^11.1.0",
     "ts-jest": "^29.1.1",
